syntax = "proto3";

package classic_active_inference_pomdp_agent_v1;

// GNN Model: Classic Active Inference POMDP Agent v1
// Generated by GNN Protobuf Serializer

message Variable {{
  string name = 1;
  string var_type = 2;
  string data_type = 3;
  repeated int32 dimensions = 4;
  string description = 5;
}}

message Connection {{
  repeated string source_variables = 1;
  repeated string target_variables = 2;
  string connection_type = 3;
  string description = 4;
}}

message Parameter {{
  string name = 1;
  string value = 2;
  string param_type = 3;
}}

message Equation {{
  string equation = 1;
  string type = 2;
}}

message TimeSpecification {{
  string time_type = 1;
  int32 steps = 2;
  string description = 3;
}}

message OntologyMapping {{
  string variable_name = 1;
  string ontology_term = 2;
}}

message GNNModel {{
  string name = 1;
  string annotation = 2;
  repeated Variable variables = 3;
  repeated Connection connections = 4;
  repeated Parameter parameters = 5;
  repeated Equation equations = 6;
  TimeSpecification time_specification = 7;
  repeated OntologyMapping ontology_mappings = 8;
}}

/* MODEL_DATA: {"model_name":"Classic Active Inference POMDP Agent v1","annotation":"","variables":[{"name":"A","var_type":"likelihood_matrix","data_type":"float","dimensions":[3,3]},{"name":"B","var_type":"transition_matrix","data_type":"float","dimensions":[3,3,3]},{"name":"C","var_type":"preference_vector","data_type":"float","dimensions":[3]},{"name":"D","var_type":"prior_vector","data_type":"float","dimensions":[3]},{"name":"E","var_type":"policy","data_type":"float","dimensions":[3]}],"connections":[{"source_variables":["A"],"target_variables":["s"],"connection_type":"directed"},{"source_variables":["B"],"target_variables":["s_prime"],"connection_type":"directed"},{"source_variables":["C"],"target_variables":["o"],"connection_type":"directed"},{"source_variables":["D"],"target_variables":["s"],"connection_type":"directed"},{"source_variables":["E"],"target_variables":["\u03c0"],"connection_type":"directed"},{"source_variables":["s"],"target_variables":["o"],"connection_type":"directed"},{"source_variables":["\u03c0"],"target_variables":["u"],"connection_type":"directed"},{"source_variables":["u"],"target_variables":["s_prime"],"connection_type":"directed"}],"parameters":[{"name":"A","value":[],"param_type":"constant"},{"name":"B","value":[],"param_type":"constant"},{"name":"C","value":[],"param_type":"constant"},{"name":"D","value":[],"param_type":"constant"},{"name":"E","value":[],"param_type":"constant"}],"equations":[],"time_specification":null,"ontology_mappings":[]} */

// Variables:
// Variable: A (likelihood_matrix)
// Variable: B (transition_matrix)
// Variable: C (preference_vector)
// Variable: D (prior_vector)
// Variable: E (policy)
// Connections:
// Connection: A --directed--> s
// Connection: B --directed--> s_prime
// Connection: C --directed--> o
// Connection: D --directed--> s
// Connection: E --directed--> π
// Connection: s --directed--> o
// Connection: π --directed--> u
// Connection: u --directed--> s_prime
// Parameters:
// Parameter: A = []
// Parameter: B = []
// Parameter: C = []
// Parameter: D = []
// Parameter: E = []